--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -28,15 +28,16 @@
 
 \tableofcontents
 \chapter{Problem Description}
-Video games are now seen as an ever-present aspect of modern life, with 97\% of people in the United States playing video games for 1 hour everyday. This industry is growing rapidly, now worth over double the American film industry. 
-
-Serious Games are a movement within the game industry made up of software developers and researchers who are using games to educate and teach. Whilst there is some debate of what exactly construes a serious game, Michael and Chen define a serious game as any game where entertainment is not the primary purpose, but instead the focus is on education. 
+Video games are now seen as an ever-present aspect of modern life, with 97% of people in the United States playing video games for 1 hour everyday. Serious Games are a movement within the game industry made up of software developers and researchers who are using games to educate and teach. Whilst there is some debate of what exactly construes a serious game, Michael and Chen define a serious game as any game where entertainment is not the primary purpose, but instead the focus is on education. 
 
 The research of Prensky (2001) explains how due to the vast amount of technology experienced in everyday life, that newer generations have had their minds rewired. These cognitive changes have led to a different set of preferences compared to previous generations, with a particular emphasis on learning. This has led to people being taught with out of date methods that are not taking into account these changes.
 
-One of the benefits to using video games is their accessibility. In the UK, internet access has over doubled during the past 10 years, with 82\% of adults now using the internet daily and 99\% of households with children having internet access. (Office for National Statistics, 2016). With such a high number of people using the internet, games hosted on the web are easily accessible. Games also appeal to a wide audience, crossing demographic boundaries such as age, gender and educational status (Griffiths, 2012) 
+One of the benefits to using video games is their accessibility. In the UK, internet access has over doubled during the past 10 years, with 82% of adults now using the internet daily and 99% of households with children having internet access. (Office for National Statistics, 2016). With such a high number of people using the internet, games hosted on the web are easily accessible. Games also appeal to a wide audience, crossing demographic boundaries such as age, gender and educational status (Griffiths, 2012) 
 
 As discussed by Malone (1981) games are intrinsically motivating, that is to say that there are no external factors as to why a person is playing a game, but they are playing for enjoyment of the game itself. By carrying this intrinsic motivation into serious games, it is clear that this could be used to engage people who otherwise might not have been interested. 
+
+As included by Reeves and Read (2013) in their “10 Ingredients of great games”, feedback is an integral part to any serious game as it changes the behaviour of the player. Feedback can be delivered instantaneously through in-game features such as progress bars, score count and time remaining. Providing the player with this positive or negative reinforcement to help them engage with the game and keep on track to completing their goals. 
+
 
 \section{Aim}
 \section{Objectives}
