--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -2,19 +2,35 @@
 \usepackage{graphicx}
 \usepackage{lipsum}% http://ctan.org/pkg/lipsum
 \usepackage{titletoc}% http://ctan.org/pkg/titletoc
-\titlecontents*{chapter}% <section-type>
-  [0pt]% <left>
-  {}% <above-code>
-  {\bfseries\chaptername\ \thecontentslabel\quad}% <numbered-entry-format>
-  {}% <numberless-entry-format>
-  {\bfseries\hfill\contentspage}% <filler-page-format>
+\usepackage[T1]{fontenc}
+\usepackage{natbib}
+\usepackage{url}
+\usepackage{titlesec}
+\usepackage{graphicx}
+
+\usepackage{enumitem}
+
+\usepackage{layout}
+\setlength{\voffset}{-0.5in}
+\setlength{\headsep}{5pt}
+
+
+\usepackage{float}
+\graphicspath{ {images/} }
+\tolerance=1
+\emergencystretch=\maxdimen
+\hyphenpenalty=10000
+\hbadness=10000  
+\titleformat{\chapter}{\normalfont\huge}{\thechapter.}{20pt}{\huge}
+\titlespacing*{\chapter}{0pt}{0pt}{20pt}
+
 
 \begin{document}
 \begin{titlepage}
 	\centering
 	{\scshape\LARGE University of Bath \par}
 	\vspace{1cm}
-	{\scshape\Large Final year project\par}
+	{\scshape\Large Project Proposal\par}
 	\vspace{1.5cm}
 	{\huge\bfseries Development of a Serious Game to teach Aristotle's Syllogisms\par}
 	\vspace{2cm}
@@ -28,59 +44,96 @@
 
 \tableofcontents
 \chapter{Problem Description}
-Video games are now seen as an ever-present aspect of modern life, with 97% of people in the United States playing video games for 1 hour everyday. Serious Games are a movement within the game industry made up of software developers and researchers who are using games to educate and teach. Whilst there is some debate of what exactly construes a serious game, Michael and Chen define a serious game as any game where entertainment is not the primary purpose, but instead the focus is on education. 
+The younger generation of today have grown up in a world consumed in technology. \cite{oblinger2005educating} described them as the Net Generation, who always need to be connected, require immediate feedback and social interaction. The research of \cite{prensky2001games} explains how due to the vast amount of technology now experienced in everyday life, that newer generations have had their minds rewired. These cognitive changes have led to a different set of preferences compared to previous generations, especially with regards to education. This has led to people being taught with methods that are not taking these new needs in to account.
 
-The research of Prensky (2001) explains how due to the vast amount of technology experienced in everyday life, that newer generations have had their minds rewired. These cognitive changes have led to a different set of preferences compared to previous generations, with a particular emphasis on learning. This has led to people being taught with out of date methods that are not taking into account these changes.
+Serious Games are a movement within the game industry made up of software developers and researchers who are using games to tackle the problems with current educational techniques. Whilst there is some debate of what exactly construes a serious game, \cite{michael2005serious} define a serious game as any game where entertainment is not the primary purpose, but where instead the focus is on education. 
 
-One of the benefits to using video games is their accessibility. In the UK, internet access has over doubled during the past 10 years, with 82% of adults now using the internet daily and 99% of households with children having internet access. (Office for National Statistics, 2016). With such a high number of people using the internet, games hosted on the web are easily accessible. Games also appeal to a wide audience, crossing demographic boundaries such as age, gender and educational status (Griffiths, 2012) 
+One of the benefits of using games to teach is their accessibility. In the United Kingdom, access to the internet has doubled over the past 10 years, with 82\% of adults now using the internet daily and 99\% of households with children having internet access. \cite{onssurvey}. With such a high number of people using the internet, games hosted on the web are readily available. accessible. Games also appeal to a wide audience, crossing demographic boundaries such as age, gender and educational status. \cite{griffiths2002educational} 
 
-As discussed by Malone (1981) games are intrinsically motivating, that is to say that there are no external factors as to why a person is playing a game, but they are playing for enjoyment of the game itself. By carrying this intrinsic motivation into serious games, it is clear that this could be used to engage people who otherwise might not have been interested. 
+As discussed by \cite{malone1981toward} games are intrinsically motivating, that is to say that there are no external factors as to why a person is playing a game, but they are playing for enjoyment of the game itself. By carrying this intrinsic motivation into serious games, it is clear that this could be used to engage people who otherwise might not have been interested. 
 
-As included by Reeves and Read (2013) in their “10 Ingredients of great games”, feedback is an integral part to any serious game as it changes the behaviour of the player. Feedback can be delivered instantaneously through in-game features such as progress bars, score count and time remaining. Providing the player with this positive or negative reinforcement to help them engage with the game and keep on track to completing their goals. 
-
+As included by \cite{reeves2013total} in their \textit{10 Ingredients of great games}, feedback is an integral part to any serious game as it changes the behaviour of the player. Feedback can be delivered instantaneously through in-game features such as progress bars, score count and time remaining. Providing the player with this positive or negative reinforcement to help them engage with the game and keep on track to completing their goals. 
 
 \section{Aim}
+Design and develop a web based game to teach the basics of logic and Aristotle's Syllogisms assuming no prior knowledge beyond basic Venn Diagrams. The game will be in a puzzle style that will involve creating venn diagrams to depict given syllogisms. There will be multiple levels with the difficulty progressing with each one. Initially as little mathematical notation as possible will be used, with set theory notations being introduced as the complexity increases. Completion of the game will result in the user being able to recognise and differentiate different examples of syllogisms. User tests will then be carried out to assess the effectiveness of the game as a method for teaching syllogisms. 
 \section{Objectives}
 \begin{itemize}
-  \item Investigate existing Serious Games, with particular focus on teaching concepts related to Mathematics and logic
+  \item Investigate existing Serious Games, with particular focus on teaching concepts related to Mathematics and logic.
 
-  \item Design, develop and release a Serious Game that can be used to teach the concepts laid out in Aristotle\textsc{\char13}s Syllogism
-  \item Ensure that the game is accessible regardless of players initial understanding of the subject
-  \item Evaluate the effectiveness of the game on users from a non-mathematical background
+  \item Design, develop and release a Serious Game that can be used to teach the concepts laid out in Aristotle's Syllogism.
+  \item Ensure that the game is accessible regardless of players initial understanding of the subject.
+  \item Evaluate the effectiveness of the game on users.
   
 \end{itemize}
-\chapter{Requirements Specification}
-\section{First section}
-\section{Second section}
-\section{Last section}
-\chapter{Project Plan}
+
+{\let\clearpage\relax \chapter{Requirements Specification}}
+   \section{Functional}
+   \begin{enumerate}[label*=\thesection .\arabic*]
+            \item The game will be written using HTML, CSS and JavaScript. The HTML5 element, Canvas, will be used to animate the game.\\
+            \textit{These are the current standards for web development. Canvas is chosen over SVG as it is written in pure JavaScript. Canvas also has better performance than SVG, although that likely will not be a concern with a game of this nature. }
+            \item The game must run on all common browsers\\
+            \textit{There are a number of known issues with certain Canvas features on certain browsers. It is important to have a consistent experience across all browsers to not detract from the experience of playing the game. }
+            \item The game must have multiple levels\\
+            \textit{This allows the game to progress in difficulty allowing the player to learn more advanced aspects of syllogisms}
+            \item The game will be played using the mouse\\
+            \textit{By allowing on the mouse to used to play the game it will make it compatible with devices that do not have a keyboard such as mobile phones}
+            \item The game must successfully recognise when the player has completed a level.\\
+            {By not recognising potential end game scenarios it could confuse the player in to thinking they are incorrect. This would lead to reduced engagement with the game.}
+        \end{enumerate}
+   \section{Non-functional}
+   \begin{enumerate}[label*=\thesection.\arabic*]
+            \item The game should run at 60 frames per second\\
+            \textit{Games at 60 frams per second appear much smoother to the player. This keeps focus on the game and not on the graphics.}
+            \item The game should be playable on tablets and mobile phones\\
+            \textit{Having all controls for the game on screen and using no keyboard input will allow the game to be played across all devices. This aids accessibility as players may not have access to a traditional PC.}
+            \item The game must have an elegant user interface\\
+            \textit{It is important to not crowd the users with an excessive number of buttons and options in the game. As no keyboard controls will be used, the challenge will be to provide a way to operate all controls of the game efficiently.}
+             \item The game must feature an tutorial at the beginning\\
+            \textit{A tutorial is crucial to explain the premise and controls of the game. Not including a tutorial would leave the player confused and unsure of how to play. }
+        \end{enumerate}
+
+
+
+{\let\clearpage\relax \chapter{Project Plan}}
+The project has four specific milestones with hard deadlines, that have been broken down to show a more granular view of the work that needs to be completed. The Gantt Chart in Figure ~\ref{fig:ganntchart} shows how long will be spent on each milestone.
 \section{Milestones}
 \begin{enumerate}
   \item Project Proposal
   \item Literature Review
+  \begin{itemize}
+  \item Research
+  \item Write review
+  \end{itemize}
+  \item Development
+  \begin{itemize}
+  \item System Design
+  \item Prototype Development
   \item System Development
   \item System Testing
   \item User Testing
+  \end{itemize}
   \item Write Dissertation
 \end{enumerate}
-\section{Second section}
-\section{Last section}
 
-\chapter{Resources}
+\begin{figure}[h]
+\caption{Gannt Chart}
+\centering
+\label{fig:ganntchart}
+\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{Gantt}
+\end{figure}
+
+{\let\clearpage\relax \chapter{Resources}}
 \section{Software Resources}
-The game will be a web based game with nearly all aspects of the game client side. It is possible that there might be some server side code needed to facilitate an online leaderboard or a multiplayer functionality.
-
-The client side will be built using traditional web technologies such as HTML and CSS. The game will be built using Canvas which is an HTML5 element that allows graphics to be drawn using JavaScript. 
-
-Any server side work will likely be done using Node.js and Express.js to create RESTful endpoints to manage the online leaderboard. Data will likely be persisted to using either MongoDB or MySQL as the database. If there is a form of online multiplayer in the game, either Node.js or Socket.io will be used for this purpose.
+All software technologies used to implement the game are free. WebStorm, a web development IDE, will be used to develop the game.
 
 \section{Hardware Resources}
 A PC will be needed to carry out the software development and dissertation write up of the project. 
 
-A web server will be needed to host all the server side content of the game. Due to the lightweight nature of the game there will be no needed for any specialist equipment.
-
 \section{Human Resources}
 Users will be required to test the game and give their feedback. 
 Meeting time with supervisor (Dr.~Willem Heijltjes) to discuss progress and direction of the project.
-\chapter{Bibliography}% 
+
+\bibliographystyle{plainnat}
+\bibliography{bibliography} 
+
 \end{document}
