--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -70,7 +70,7 @@ Design and develop a web based game to teach the basics of logic and Aristotle's
    \section{Functional}
    \begin{enumerate}[label*=\thesection .\arabic*]
             \item The game will be written using HTML, CSS and JavaScript. The HTML5 element, Canvas, will be used to animate the game.\\
-            \textit{These are the current standards for web development. Canvas is chosen over SVG as it is written in pure JavaScript. Canvas also has better performance than SVG, although that likely will not be a concern with a game of this nature. }
+            \textit{These are the current standards for web development. Canvas is chosen over SVG as Canvas is written in pure JavaScript. Canvas also has better performance than SVG, although that likely will not be a concern with a game of this nature. }
             \item The game must run on all common browsers\\
             \textit{There are a number of known issues with certain Canvas features on certain browsers. It is important to have a consistent experience across all browsers to not detract from the experience of playing the game. }
             \item The game must have multiple levels\\
@@ -94,7 +94,8 @@ Design and develop a web based game to teach the basics of logic and Aristotle's
 
 
 
-{\let\clearpage\relax \chapter{Project Plan}}
+{\let\clearpage\relax\chapter{Project Plan}}
+\noindent 
 The project has four specific milestones with hard deadlines, that have been broken down to show a more granular view of the work that needs to be completed. The Gantt Chart in Figure ~\ref{fig:ganntchart} shows how long will be spent on each milestone.
 \section{Milestones}
 \begin{enumerate}
@@ -122,7 +123,7 @@ The project has four specific milestones with hard deadlines, that have been bro
 \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{Gantt}
 \end{figure}
 
-{\let\clearpage\relax \chapter{Resources}}
+{\let\clearpage\relax\chapter{Resources}}
 \section{Software Resources}
 All software technologies used to implement the game are free. WebStorm, a web development IDE, will be used to develop the game.
 
