--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -44,18 +44,18 @@
 
 \tableofcontents
 \chapter{Problem Description}
-The younger generation of today have grown up in a world consumed in technology. \cite{oblinger2005educating} described them as the Net Generation, who always need to be connected, require immediate feedback and social interaction. The research of \cite{prensky2001games} explains how due to the vast amount of technology now experienced in everyday life, that newer generations have had their minds rewired. These cognitive changes have led to a different set of preferences compared to previous generations, especially with regards to education. This has led to people being taught with methods that are not taking these new needs in to account.
+The younger generation of today have grown up in a world consumed in technology. \cite{oblinger2005educating} described them as the \textit{Net Generation}, the generation who always need to be connected, require immediate feedback and crave social interaction. The research of \cite{prensky2001games} explains how the vast amount of technology now experienced in everyday life has led to these newer generations having their minds rewired. These cognitive changes have caused a different set of educational preferences when compared to previous generations, with teaching methods not evolving in order to take this in to account.
 
-Serious Games are a movement within the game industry made up of software developers and researchers who are using games to tackle the problems with current educational techniques. Whilst there is some debate of what exactly construes a serious game, \cite{michael2005serious} define a serious game as any game where entertainment is not the primary purpose, but where instead the focus is on education. 
+Serious Games are a movement within the game industry comprised of software developers and researchers who are using games to tackle this problem. Whilst there is some debate around what exactly construes a serious game, \cite{michael2005serious} define one as any game where entertainment is not the primary purpose, but where instead the focus is on education. 
 
-One of the benefits of using games to teach is their accessibility. In the United Kingdom, access to the internet has doubled over the past 10 years, with 82\% of adults now using the internet daily and 99\% of households with children having internet access. \cite{onssurvey}. With such a high number of people using the internet, games hosted on the web are readily available. accessible. Games also appeal to a wide audience, crossing demographic boundaries such as age, gender and educational status. \cite{griffiths2002educational} 
+One of the benefits of using games to teach is their accessibility. In the United Kingdom  access to the internet has doubled over the past 10 years, with 82\% of adults now using the internet on a daily basis\citep{onssurvey}. With such a high number of people using the internet it allows games hosted on the web to be available to the masses. Games also appeal to a wide audience by crossing demographic boundaries such as age, gender and educational status \citep{griffiths2002educational}. 
 
-As discussed by \cite{malone1981toward} games are intrinsically motivating, that is to say that there are no external factors as to why a person is playing a game, but they are playing for enjoyment of the game itself. By carrying this intrinsic motivation into serious games, it is clear that this could be used to engage people who otherwise might not have been interested. 
+As discussed by \cite{malone1981toward} games are also intrinsically motivating, such that there are no external factors as to why a person is playing other than for their own enjoyment. By carrying this intrinsic motivation into serious games, it is clear that this could be used to engage people who otherwise might not have been interested in learning. 
 
-As included by \cite{reeves2013total} in their \textit{10 Ingredients of great games}, feedback is an integral part to any serious game as it changes the behaviour of the player. Feedback can be delivered instantaneously through in-game features such as progress bars, score count and time remaining. Providing the player with this positive or negative reinforcement to help them engage with the game and keep on track to completing their goals. 
+With feedback being such a crucial element of the needs of the \textit{The Net Generation}, it was included by \cite{reeves2013total} in their \textit{10 Ingredients of Great Games}. The importance of feedback in serious games cannot be underestimated as it alters the behaviour of the player. In-game features such as progress bars, score count and time remaining allow feedback to be delivered instantaneously to the player. Providing the player with this positive or negative reinforcement helps them to engage with the game and keep on track to completing their goals. 
 
 \section{Aim}
-Design and develop a web based game to teach the basics of logic and Aristotle's Syllogisms assuming no prior knowledge beyond basic Venn Diagrams. The game will be in a puzzle style that will involve creating venn diagrams to depict given syllogisms. There will be multiple levels with the difficulty progressing with each one. Initially as little mathematical notation as possible will be used, with set theory notations being introduced as the complexity increases. Completion of the game will result in the user being able to recognise and differentiate different examples of syllogisms. User tests will then be carried out to assess the effectiveness of the game as a method for teaching syllogisms. 
+Design and develop a web based game to teach the player about Aristotle's Syllogisms. The game will be in a puzzle style that will involve creating Venn diagrams to depict given syllogisms. There will be multiple levels with the difficulty progressing with each one. Initially as little mathematical notation as possible will be used, with set theory notations being introduced as the complexity increases. The game will initially begin with a small section teaching the basics of Venn Diagrams as these will be need to be understood in order to play. Completion of the game will result in the user being able to recognise and differentiate different examples of syllogisms. User tests will then be carried out to assess the effectiveness of the game as a method for teaching syllogisms. 
 \section{Objectives}
 \begin{itemize}
   \item Investigate existing Serious Games, with particular focus on teaching concepts related to Mathematics and logic.
