--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -61,6 +61,7 @@ Design and develop a web based game to teach the player about Aristotle's Syllog
   \item Investigate existing Serious Games, with particular focus on teaching concepts related to Mathematics and logic.
 
   \item Design, develop and release a Serious Game that can be used to teach the concepts laid out in Aristotle's Syllogism.
+  
   \item Ensure that the game is accessible regardless of players initial understanding of the subject.
   \item Evaluate the effectiveness of the game on users.
   
@@ -70,25 +71,25 @@ Design and develop a web based game to teach the player about Aristotle's Syllog
    \section{Functional}
    \begin{enumerate}[label*=\thesection .\arabic*]
             \item The game will be written using HTML, CSS and JavaScript. The HTML5 element, Canvas, will be used to animate the game.\\
-            \textit{These are the current standards for web development. Canvas is chosen over SVG as Canvas is written in pure JavaScript. Canvas also has better performance than SVG, although that likely will not be a concern with a game of this nature. }
-            \item The game must run on all common browsers\\
-            \textit{There are a number of known issues with certain Canvas features on certain browsers. It is important to have a consistent experience across all browsers to not detract from the experience of playing the game. }
-            \item The game must have multiple levels\\
-            \textit{This allows the game to progress in difficulty allowing the player to learn more advanced aspects of syllogisms}
-            \item The game will be played using the mouse\\
-            \textit{By allowing on the mouse to used to play the game it will make it compatible with devices that do not have a keyboard such as mobile phones}
+            \textit{These are the current standards for web development. Canvas is chosen over SVG as Canvas can be written in pure JavaScript. Canvas also has better performance than SVG, although that likely will not be a concern with a game of this nature. }
+            \item The game must run on all common browsers.\\
+            \textit{There are a number of known issues with some Canvas features on certain browsers. It is important to have a consistent experience across all browsers to not detract from the experience of playing the game. }
+            \item The game must have multiple levels.\\
+            \textit{This allows the game to progress in difficulty, allowing the player to learn more advanced aspects of syllogisms.}
+            \item The game will be played using the mouse.\\
+            \textit{By allowing only the mouse to used to play the game it will make it compatible with devices that do not have a keyboard.}
             \item The game must successfully recognise when the player has completed a level.\\
             {By not recognising potential end game scenarios it could confuse the player in to thinking they are incorrect. This would lead to reduced engagement with the game.}
         \end{enumerate}
    \section{Non-functional}
    \begin{enumerate}[label*=\thesection.\arabic*]
-            \item The game should run at 60 frames per second\\
+            \item The game should run at 60 frames per second.\\
             \textit{Games at 60 frams per second appear much smoother to the player. This keeps focus on the game and not on the graphics.}
-            \item The game should be playable on tablets and mobile phones\\
+            \item The game should be playable on tablets and mobile phones.\\
             \textit{Having all controls for the game on screen and using no keyboard input will allow the game to be played across all devices. This aids accessibility as players may not have access to a traditional PC.}
-            \item The game must have an elegant user interface\\
+            \item The game must have an elegant user interface.\\
             \textit{It is important to not crowd the users with an excessive number of buttons and options in the game. As no keyboard controls will be used, the challenge will be to provide a way to operate all controls of the game efficiently.}
-             \item The game must feature an tutorial at the beginning\\
+             \item The game must feature an tutorial at the beginning.\\
             \textit{A tutorial is crucial to explain the premise and controls of the game. Not including a tutorial would leave the player confused and unsure of how to play. }
         \end{enumerate}
 
@@ -96,7 +97,7 @@ Design and develop a web based game to teach the player about Aristotle's Syllog
 
 {\let\clearpage\relax\chapter{Project Plan}}
 \noindent 
-The project has four specific milestones with hard deadlines, that have been broken down to show a more granular view of the work that needs to be completed. The Gantt Chart in Figure ~\ref{fig:ganntchart} shows how long will be spent on each milestone.
+The project has four specific milestones with hard deadlines, that have been broken down to show a more granular view of the work that needs to be completed. The Gantt Chart in Figure~\ref{fig:ganntchart} shows how long will be spent on each milestone.
 \section{Milestones}
 \begin{enumerate}
   \item Project Proposal
@@ -132,7 +133,7 @@ A PC will be needed to carry out the software development and dissertation write
 
 \section{Human Resources}
 Users will be required to test the game and give their feedback. 
-Meeting time with supervisor (Dr.~Willem Heijltjes) to discuss progress and direction of the project.
+Meeting time with supervisor (Dr.~Willem Heijltjes) will be needed to discuss progress and direction of the project.
 
 \bibliographystyle{plainnat}
 \bibliography{bibliography} 
