--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -52,7 +52,10 @@ One of the benefits of using games to teach is their accessibility. In the Unite
 
 As discussed by \cite{malone1981toward} games are also intrinsically motivating, such that there are no external factors as to why a person is playing other than for their own enjoyment. By carrying this intrinsic motivation into serious games, it is clear that this could be used to engage people who otherwise might not have been interested in learning. 
 
-With feedback being such a crucial element of the needs of the \textit{The Net Generation}, it was included by \cite{reeves2013total} in their \textit{10 Ingredients of Great Games}. The importance of feedback in serious games cannot be underestimated as it alters the behaviour of the player. In-game features such as progress bars, score count and time remaining allow feedback to be delivered instantaneously to the player. Providing the player with this positive or negative reinforcement helps them to engage with the game and keep on track to completing their goals. 
+Formative and summative assessments are two common ways that feedback is delivered to students in education. Whereas formative assessments are carried out during the learning process, summative assessments tend to take place at the end of it. As explained by \cite{irons2007enhancing}, formative assessments can be hugely beneficial as they enhance the learning process by creating a positive environment which in turns results in greater motivation for learning. 
+
+Serious Games lend themselves extremely well to delivering formative feedback to players through in-game features such as progress bars, score count and countdown timers. Feedback can also be provided to the player as they make mistakes allowing the player to engage with the game and keep on track to completing their goals. This can also help the player from becoming frustrated and not able to progress past a certain point.
+
 
 \section{Aim}
 Design and develop a web based game to teach the player about Aristotle's Syllogisms. The game will be in a puzzle style that will involve creating Venn diagrams to depict given syllogisms. There will be multiple levels with the difficulty progressing with each one. Initially as little mathematical notation as possible will be used, with set theory notations being introduced as the complexity increases. The game will initially begin with a small section teaching the basics of Venn Diagrams as these will be need to be understood in order to play. Completion of the game will result in the user being able to recognise and differentiate different examples of syllogisms. User tests will then be carried out to assess the effectiveness of the game as a method for teaching syllogisms. 
