--- a/Reports/bibliography.bib
+++ b/Reports/bibliography.bib
@@ -61,3 +61,14 @@
   year={2007},
   publisher={Routledge}
 }
+
+@article{larkin1987diagram,
+  title={Why a diagram is (sometimes) worth ten thousand words},
+  author={Larkin, Jill H and Simon, Herbert A},
+  journal={Cognitive science},
+  volume={11},
+  number={1},
+  pages={65--100},
+  year={1987},
+  publisher={Wiley Online Library}
+}
