--- a/Reports/bibliography.bib
+++ b/Reports/bibliography.bib
@@ -72,3 +72,13 @@
   year={1987},
   publisher={Wiley Online Library}
 }
+
+@InCollection{sep-aristotle-logic,
+	author       =	{Smith, Robin},
+	title        =	{Aristotle's Logic},
+	booktitle    =	{The Stanford Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{http://plato.stanford.edu/archives/win2016/entries/aristotle-logic/}},
+	year         =	{2016},
+	edition      =	{Winter 2016},
+}
