--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -66,20 +66,24 @@ Serious Games lend themselves extremely well to delivering formative feedback to
 
 
 \section{Aim}
-Design and develop a web based game to teach the player about Aristotle's Syllogisms. Traditionally, syllogisms are represented sententially.
-
-
+Design and develop a web based game to teach the player about Aristotle's Syllogisms.
+Syllogisms have been chosen to be turned into a game for a number of reasons. Firstly, syllogisms have had a huge cultural significance on the history of logic in the western world \citep{sep-aristotle-logic}. Aristotle's work on logic was the earliest known formal study of the the topic, which was not replaced in academia until the 19th century with Gotlobb Frege's first order logic.
+Syllogisms are a very accessible way of learning about formal logic as they can depicted entirely through the use of diagrams or natural language. It can be hard to grasp the concept of other formal logic systems when examples use set theory notation and letters to represent ideas.
+Using real world examples when teaching syllogisms allows the difficulty to be extracted out making the concepts far easier for the learner. Traditionally, syllogisms are represented sententially.
+\bigbreak
 \begin{tightcenter}
 \textit{All men are mortal}\\
 \textit{All Greeks are men}\\
 \textit{All Greeks are mortal}\\
 \end{tightcenter}
-
+\bigbreak
 However, representing syllogisms this way is not the most effective as they can be logically quite complex. As \cite{larkin1987diagram} explain, sentential form requires inferences to be made, and then those inferences to be held in memory. Throughout working through the syllogism those inferences must be continually remembered whilst working through the problem.
 
-There are a number of graphical notations that aim to remedy this problem. The most common representation is in the form of Venn diagrams, but alternatives such as Euler and Linear diagrams both exist. 
 
-This game will use the Venn diagram representation to depict syllogisms. 
+There are a number of graphical notations that aim to remedy this problem. The most common representation is in the form of Venn diagrams, but alternatives such as Euler and Linear diagrams both exist.
+
+
+This game will use the Venn diagram representation to depict syllogisms.
 There will be multiple levels with the difficulty progressing with each one. Initially as little mathematical notation as possible will be used, with set theory notations being introduced as the complexity increases. The game will initially begin with a small section teaching the basics of Venn Diagrams as these will be need to be understood in order to play. Completion of the game will result in the user being able to recognise and differentiate different examples of syllogisms. User tests will then be carried out to assess the effectiveness of the game as a method for teaching syllogisms.
 
 \section{Objectives}
