--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -67,9 +67,11 @@ Serious Games lend themselves extremely well to delivering formative feedback to
 
 \section{Aim}
 Design and develop a web based game to teach the player about Aristotle's Syllogisms.
-Syllogisms have been chosen to be turned into a game for a number of reasons. Firstly, syllogisms have had a huge cultural significance on the history of logic in the western world \citep{sep-aristotle-logic}. Aristotle's work on logic was the earliest known formal study of the the topic, which was not replaced in academia until the 19th century with Gotlobb Frege's first order logic.
-Syllogisms are a very accessible way of learning about formal logic as they can depicted entirely through the use of diagrams or natural language. It can be hard to grasp the concept of other formal logic systems when examples use set theory notation and letters to represent ideas.
-Using real world examples when teaching syllogisms allows the difficulty to be extracted out making the concepts far easier for the learner. Traditionally, syllogisms are represented sententially.
+Syllogisms have been chosen to be turned into a game for a number of reasons. Firstly, syllogisms have had a huge cultural significance on the history of logic in the Western world \citep{sep-aristotle-logic}. Aristotle's work on logic was the earliest known formal study of the topic, which was not replaced in academia until the 19th century with Gotlobb Frege's first order logic.
+Syllogisms are a very accessible way of learning about formal logic as they can depicted entirely through the use of diagrams or natural language. It can be hard to formulate other formal logic systems when examples use set theory notation and letters to represent ideas.
+Using real world examples when teaching syllogisms allows the difficulty to be extracted out making the concepts far easier for the learner. 
+
+Traditionally, syllogisms are represented sententially.
 \bigbreak
 \begin{tightcenter}
 \textit{All men are mortal}\\
