--- a/Reports/test.tex
+++ b/Reports/test.tex
@@ -67,8 +67,8 @@ Serious Games lend themselves extremely well to delivering formative feedback to
 
 \section{Aim}
 Design and develop a web based game to teach the player about Aristotle's Syllogisms.
-Syllogisms have been chosen to be turned into a game for a number of reasons. Firstly, syllogisms have had a huge cultural significance on the history of logic in the Western world \citep{sep-aristotle-logic}. Aristotle's work on logic was the earliest known formal study of the topic, which was not replaced in academia until the 19th century with Gotlobb Frege's first order logic.
-Syllogisms are a very accessible way of learning about formal logic as they can depicted entirely through the use of diagrams or natural language. It can be hard to formulate other formal logic systems when examples use set theory notation and letters to represent ideas.
+Syllogisms are suitable to be turned into a game for a number of reasons. Firstly, syllogisms have had a huge cultural significance on the history of logic in the Western world \citep{sep-aristotle-logic}. Aristotle's work on logic was the earliest known formal study of the topic, which was not replaced in academia until the 19th century with Gotlobb Frege's first order logic.
+Syllogisms are a very accessible way of learning about formal logic as they can be depicted entirely through the use of diagrams or natural language. It can be hard to formulate other formal logic systems when examples use set theory notation and letters to represent ideas.
 Using real world examples when teaching syllogisms allows the difficulty to be extracted out making the concepts far easier for the learner. 
 
 Traditionally, syllogisms are represented sententially.
@@ -170,6 +170,71 @@ A PC will be needed to carry out the software development and dissertation write
 \section{Human Resources}
 Users will be required to test the game and give their feedback. 
 Meeting time with supervisor (Dr.~Willem Heijltjes) will be needed to discuss progress and direction of the project.
+
+
+\chapter{Literature Review}
+
+
+Aristotle's work on formal logic was the earliest known formal study of the topic, which remained at the forefront of academia until the 19th following Gotlobb Frege's work on first order logic. As syllogisms were so prominent in logic for such a great length of time they have been massively culturally significant on the history of logic in the Western world \citep{sep-aristotle-logic}. Up until the 12th Century, medieval logicians only had access to a small portion of Aristotle's work with the notable exclusion being Prior Analytics, which contained his work on syllogisms. This period of time is known as logica vetus, or old logic. It wasn't until the 12th century when Prior Analytics resurfaced in the western world that the logica nova, or new logic, began. Immanuel Kant, a prominent 18th century philosophers, went as far as to describe Prior Analytics as "a closed and completed body of doctrine" demonstrating just how highly his work on syllogisms was thought of.
+
+
+Aristotle defined his syllogisms as "a discourse in which, certain things having been supposed, something different from the things supposed results of necessity because these things are so". Put more simply, syllogisms are a type of deductive reasoning that when used on a logical argument allows a conclusion to be drawn. Aristotle's focus was on categorical syllogisms which is a logical argument that contains three categorical propositions. These three categorical propositions in turn are made up of two premises and a conclusion. Each categorical premise is made up of categorical terms, of which each is used twice in the syllogism as a whole. Each categorical premise can be described as a sentence that connects a predicate and a subject by a verb (copula). 
+\bigbreak
+\begin{tightcenter}
+\textit{All M are P}\\ 
+\textit{All S are M}\\
+\textit{All S are P}\\
+\end{tightcenter}
+\bigbreak
+Syllogisms are capable of being applied to any logical argument but to allow them to be compared to each other, they must be represented in a standard form. A categorical syllogism that follows standard form is always structured in the same way, first the major premise, then the minor premise followed by the conclusion. All logically unique variations of syllogisms can be represented in standard form using the mood and figure notation. The mood of a syllogism refers to the order in which the categorical propositions appear in the syllogism and are represented by four different classes, A,I,E,O.
+\begin{itemize}
+\item A - All A is B      universal affirmative proposition
+\item I - Some A is B     universal negative proposition
+\item E - No A is B    particular affirmative proposition
+\item O - Some A is not B    particular negative proposition
+\end{itemize}
+Syllogisms also have a figure that describes the placement of the two middle terms.
+
+\begin{center}
+  \begin{tabular}{ l | c | c | c | r }
+     & Figure 1 & Figure 2 & Figure 3 & Figure 4 \\ \hline
+    Major & M-P & P-M & M-P & P-M \\ \hline
+    Minor & S-M & S-M & M-S & M-S \\
+  \end{tabular}
+\end{center}
+
+By combining all the different possibilities of mood and figure there are 256 logically unique syllogisms, eg., AOO-2. 
+\bigbreak
+\begin{tightcenter}
+\textit{All P is M}\\ 
+\textit{Some S is not M}\\
+\textit{Some S is not P}\\
+\end{tightcenter}
+\bigbreak
+
+Off these 256 syllogisms the majority are logically invalid, with only 24 being valid. Of these 24, 15 of these fall foul to the existential fallacy. That is to say that a syllogism with two universal premises has a particular conclusion. 
+\bigbreak
+\begin{tightcenter}
+\textit{All unicorns are animals.}\\ 
+\textit{All animals are dangerous.}\\
+\textit{Therefore, some unicorns are dangerous.}\\
+\end{tightcenter}
+\bigbreak
+
+The reason that this commits the logical fallacy is because whilst a unicorn does not need to exist to be classed as an animal, in order to class one as dangerous it must exist.
+
+Some of these also display weakened form, meaning a stronger conclusion can be drawn from the premises than is actually drawn.
+
+
+
+\bigbreak
+\begin{tightcenter}
+\textit{All mammals are animals}\\ 
+\textit{All dogs are mammals}\\
+\textit{Some dogs are animals }\\
+\end{tightcenter}
+\bigbreak
+
 
 \bibliographystyle{plainnat}
 \bibliography{bibliography} 
