Add new articles

--- a/Reports/LiteratureReview/test.tex
+++ b/Reports/LiteratureReview/test.tex
@@ -7,6 +7,7 @@
 \usepackage{titlesec}
 \usepackage{graphicx}
 \usepackage{subfig}
+\usepackage{array}% http://ctan.org/pkg/array
 
 \usepackage{enumitem}
 
@@ -122,7 +123,7 @@ However representing syllogisms this way is not the most effective as they can b
 
 \subsection{Euler Circles}
 Euler circles are one popular way in which syllogisms can be represented. 
-These are a very natural way of representing sets, with\cite{Erickson1978-ERIROS} putting forward the theory that when people are thinking about syllogisms that they are in fact being mentally thought of as Euler circles. He proposed that in the proposition, All A are B, 75\% of the time that will be imagined as coincident circles and the other 25\% as traditional euler circles.
+These are a very natural way of representing sets, with \cite{Erickson1978-ERIROS} putting forward the theory that when people are thinking about syllogisms that they are in fact being mentally thought of as Euler circles. He proposed that in the proposition, All A are B, 75\% of the time that will be imagined as coincident circles and the other 25\% as traditional euler circles.
 
 \begin{figure}[!tbp]
   \centering
@@ -136,6 +137,36 @@ These are a very natural way of representing sets, with\cite{Erickson1978-ERIROS
     \caption{Traditional Euler Circles}
   \end{minipage}
 \end{figure}
+
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{ | c | m{5cm} | m{5cm} | }
+    \hline
+    my.Lboro & Advantages & Disadvantages \\ \hline
+    \begin{minipage}{.3\textwidth}
+      \includegraphics[width=\linewidth]{EulerCircles}
+    \end{minipage}
+    &
+    %\begin{minipage}[t]{5cm}
+      \begin{itemize}
+        \item Accessibility
+        \item Up to date information
+        \item Fulfil students needs and wants \ldots
+      \end{itemize}
+    %\end{minipage}
+    & 
+    %\begin{minipage}{5cm}
+      \begin{itemize}
+        \item Accessibility
+        \item Up to date information
+        \item Fulfil students needs and wants \ldots
+      \end{itemize}
+    %\end{minipage}
+    \\ \hline
+  \end{tabular}
+  \caption{my.Lboro Analysis}\label{tbl:myLboro}
+\end{table}
+
 
 Whilst according the Erickson the coincident are more commonly thought of, for diagrammatic purposes the traditional way will be discussed as it is clearer. 
 
