Add new articles

--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -143,3 +143,8 @@
 	title = {Research on Syllogistic Reasoning},
 	editor = {Russell Revlin and Richard E. Mayer}
 }
+@article{cheng2012visualizing,
+  title={Visualizing syllogisms: category pattern diagrams versus Venn diagrams},
+  author={Cheng, Peter CH},
+  year={2012}
+}
