Add new articles

--- a/Reports/LiteratureReview/bibliography.bib
+++ b/Reports/LiteratureReview/bibliography.bib
@@ -148,3 +148,29 @@
   author={Cheng, Peter CH},
   year={2012}
 }
+
+@article{englebretsen1991,
+author = "Englebretsen, George",
+doi = "10.1305/ndjfl/1093636009",
+fjournal = "Notre Dame Journal of Formal Logic",
+journal = "Notre Dame J. Formal Logic",
+month = "12",
+number = "1",
+pages = "37--69",
+publisher = "Duke University Press",
+title = "Linear diagrams for syllogisms (with relationals).",
+url = "http://dx.doi.org/10.1305/ndjfl/1093636009",
+volume = "33",
+year = "1991"
+}
+
+@article{lemon1998insufficiency,
+  title={On the insufficiency of linear diagrams for syllogisms},
+  author={Lemon, Oliver and Pratt, Ian and others},
+  journal={Notre Dame Journal of Formal Logic},
+  volume={39},
+  number={4},
+  pages={573--580},
+  year={1998},
+  publisher={University of Notre Dame}
+}
